--- a/proyecto/composer.json
+++ b/proyecto/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.2",
         "laraveles/spanish": "^1.5"
     },
     "require-dev": {
